--- a/ShinyPlumber for useRs/bullring_api/bullring.yaml
+++ b/ShinyPlumber for useRs/bullring_api/bullring.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: bullring
-        image: bullreg.azurecr.io/bullring
+        image: shinyplumberreg.azurecr.io/bullring
         ports:
         - containerPort: 8000
         resources:
@@ -23,7 +23,7 @@ spec:
           limits:
             cpu: 500m
       imagePullSecrets:
-      - name: bullreg.azurecr.io
+      - name: shinyplumberreg.azurecr.io
 ---
 apiVersion: v1
 kind: Service
